--- a/parksnap_back/pom.xml
+++ b/parksnap_back/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>parksnap_back</artifactId>
+	<artifactId>parking</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>parking</name>
 	<description>Demo project for Spring Boot</description>
