--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-parksnap_back/src/main/resources/application.properties
+# parksnap_back/src/main/resources/application.properties
 resources/Releases/
